5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4008/executions/1590_2049.log
== TEST (2019-03-24 16:56:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var = int(input(x))
var1 = int(input(y))
print(var, var1, var//var1, var%var1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = int(input(x))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 16:57:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var = int(input("quem e o dividendo?"))
var1 = int(input("quem e o divisor?"))
print(var, var1, var//var1, var%var1)
-- OUTPUT:
8 5 1 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 16:57:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var = int(input("quem e o dividendo?"))
var1 = int(input("quem e o divisor?"))
print(var, var1, var//var1, var%var1)
-- EXECUTION TIME:
0.125885
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8 5 1 3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14 2 7 0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347 2 173 1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:28:35) 
-- CODE:
x = input(float("qual o dividendo?"))
y = input(float("qual o divisor?"))
print(x)
print(y)
print(x/y)
print(x%y)
					 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x = input(float("qual o dividendo?"))
ValueError: could not convert string to float: 'qual o dividendo?'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:28:58) 
-- CODE:
x = float(input(("qual o dividendo?"))
y = float(input("qual o divisor?"))
print(x)
print(y)
print(x/y)
print(x%y)
					 

-- ERROR:
File "XXXX", line 2
    y = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:29:10) 
-- CODE:
x = float(input("qual o dividendo?"))
y = float(input("qual o divisor?"))
print(x)
print(y)
print(x/y)
print(x%y)
					 

-- OUTPUT:
8.0
5.0
1.6
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:29:19) 
-- CODE:
x = float(input("qual o dividendo?"))
y = float(input("qual o divisor?"))
print(x)
print(y)
print(x/y)
print(x%y)
					 

-- EXECUTION TIME:
0.15145
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8.0
5.0
1.6
3.0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14.0
2.0
7.0
0.0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347.0
2.0
173.5
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:29:25) 
-- CODE:
x = float(input("qual o dividendo?"))
y = float(input("qual o divisor?"))
print(x)
print(y)
print(x//y)
print(x%y)
					 

-- OUTPUT:
8.0
5.0
1.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:29:31) 
-- CODE:
x = float(input("qual o dividendo?"))
y = float(input("qual o divisor?"))
print(x)
print(y)
print(x//y)
print(x%y)
					 

-- EXECUTION TIME:
0.162699
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8.0
5.0
1.0
3.0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14.0
2.0
7.0
0.0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347.0
2.0
173.0
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:29:42) 
-- CODE:
x = float(input("qual o dividendo?"))
y = float(input("qual o divisor?"))
print(x)
print(y)
print(x/y)
print(x%y)
					 

-- EXECUTION TIME:
0.157933
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8.0
5.0
1.6
3.0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14.0
2.0
7.0
0.0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347.0
2.0
173.5
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:29:43) 
-- CODE:
x = float(input("qual o dividendo?"))
y = float(input("qual o divisor?"))
print(x)
print(y)
print(x/y)
print(x%y)
					 

-- OUTPUT:
8.0
5.0
1.6
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:29:58) 
-- CODE:
x = float(input("qual o dividendo?"))
y = float(input("qual o divisor?"))
print(x)
print(y)
print(x/y)
print(x%y)
					 

-- OUTPUT:
8.0
5.0
1.6
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:30:06) 
-- CODE:
x = float(input("qual o dividendo?"))
y = float(input("qual o divisor?"))
print(x)
print(y)
print(x/y)
print(x%y)
					 

-- OUTPUT:
8.0
5.0
1.6
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:30:16) 
-- CODE:
x = float(input("qual o dividendo?"))
y = float(input("qual o divisor?"))
print(x)
print(y)
print(x/y)
print(x%y)
					 

-- OUTPUT:
8.0
5.0
1.6
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:30:23) 
-- CODE:
x = float(input("qual o dividendo?"))
y = float(input("qual o divisor?"))
print(x)
print(y)
print(x/y)
print(x%y)
					 

-- EXECUTION TIME:
0.151864
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8.0
5.0
1.6
3.0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14.0
2.0
7.0
0.0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347.0
2.0
173.5
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:30:59) 
-- CODE:
x = float(input("qual o dividendo?"))
y = float(input("qual o divisor?"))
print(x)
print(y)
print(int(x//y))
print(x%y)
					 

-- OUTPUT:
8.0
5.0
1
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:31:08) 
-- CODE:
x = float(input("qual o dividendo?"))
y = float(input("qual o divisor?"))
print(x)
print(y)
print(int(x//y))
print(x%y)
					 

-- EXECUTION TIME:
0.139325
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8.0
5.0
1
3.0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14.0
2.0
7
0.0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347.0
2.0
173
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:32:12) 
-- CODE:
x = int(input("qual o dividendo?"))
y = int(input("qual o divisor?"))
print(x)
print(y)
print(x//y)
print(x%y)
					 

-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:32:18) 
-- CODE:
x = int(input("qual o dividendo?"))
y = int(input("qual o divisor?"))
print(x)
print(y)
print(x//y)
print(x%y)
					 

-- EXECUTION TIME:
0.183518
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
